# we_love_party

./: .gitignore  .swp  README.md  README_for_developers.md  development_tools_party.py
communication_channel_system/email/: README.md  email_send.py  email_service.py
documents/: README.md
documents/Introduction/: README.md
email_platform/: README.md  email_send.py  email_service.py
flutter_client/: .gitignore  README.md  analysis_options.yaml  generate_grpc.sh  hosts  playground.ipynb  pubspec.yaml  v2ray_config.json  v2ray_config_for_mobile.json
golang_user_storage_system/: .gitignore  Dockerfile  README.md  build.sh  go.mod  go.sum  main.go
java_free_map_backend_system/: .gitignore  Dockerfile  README.md  settings.gradle.kts
party_protocols/: .gitignore  Notes.md  README.md  clear_docker_cache.sh  docker-compose.backup.yml  docker-compose.database.yaml  docker-compose.gateway.yaml  docker-compose.service.yaml  docker-compose.service1.yaml  docker-compose.service2.yaml  docker-compose.test.yaml  docker-compose.yaml  envoy.yaml  envoy_Dockerfile  restart_docker.sh  restart_test_docker.sh
python_chat_with_friends_system/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
python_chat_with_friends_system/src/: config.py.backup  grpc_service.py  main.py  utils.py
python_chat_with_friends_system/src/database/: mongodb.py  postgre_sql_db.py  sqlite.py
python_chat_with_friends_system/src/generated_grpc/chat_with_friends_service/: __init__.py
python_chat_with_friends_system/src/grpc_key_string_maps/: account_auth_service.py  account_storage_service.py  chat_with_friends_service.py  data_model.py  free_map_service.py  helloworld.py  internal_api_service.py  room_control_service.py
python_chat_with_friends_system/src/tests/: entry.py  test_mongodb.py  test_postgre_sql_db.py
python_user_auth_system/: .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
python_user_auth_system/src/: auth.py  config.py.backup  grpc_service.py  main.py  models.py  utils.py
python_user_auth_system/src/database/: redis.py  sqlite.py
python_user_auth_system/src/generated_grpc/account_auth_service/: __init__.py
python_user_auth_system/src/tests/: entry.py  test_auth_system.py  test_database.py  test_email_sending.py  test_redis.py  test_restful_api.py
rust_internal_api_system/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  build.sh
rust_internal_api_system/protocols/: internal_api_service.proto
rust_internal_api_system/src/: lib.rs  main.rs  server.rs
rust_internal_api_system/src/environment_module/: basic.rs
rust_internal_api_system/src/grpc_key_string_maps/: account_auth_service.rs  account_storage_service.rs  data_model.rs  helloworld.rs  internal_api_service.rs  mod.rs  room_control_service.rs
rust_internal_api_system/src/internal_api_service/: internal_api_service_implementation.rs  mod.rs  postgre_sql_database_handler.rs
rust_internal_api_system/tests/: general_test.rs  postgre_sql_test.rs
typescript_room_controller/: .gitignore  Dockerfile  README.md  copy_files.sh  copy_files.ts  garbage_mac_m1.sh  package-lock.json  package.json  tsconfig.json
(+207 files in other folders)
