[tool.poetry]
name = "python_user_auth_system"
version = "0.1.0"
description = ""
authors = ["yingshaoxo <yingshaoxo@gmail.com>"]
packages = [
    { include = "**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
PyJWT = "^2.3.0"
requests = "^2.27.1"
SQLAlchemy = "1.4.41"
databases = "^0.5.5"
aiosqlite = "^0.17.0"
O365 = "^2.0.18"
redis = "^4.1.4"
func-timeout = "^4.3.5"
betterproto = {version = "2.0.0b5", extras = ["compiler"]}
auto-everything = "^3.15"
aiosmtpd = "^1.4.4.post2"
python-telegram-bot = "^20.2"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.51.1"
pytest-asyncio = "^0.20.3"
pytest = "^7.2.0"
yapf = "^0.32.0"
ipykernel = "^6.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "src.main:start"
test = "src.tests.entry:main"